// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendToken should not render for new identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <a
          aria-label="Add identity"
          class="add"
          href="/identity/add"
          title="Add identity"
        />
      </section>
      <a
        aria-label="My Third Identity which has a very long name and might not even fit on the screen"
        class="left"
        href="/"
        title="My Third Identity which has a very long name and might not even fit on the screen"
      />
      <a
        aria-label="My Sporran Identity"
        class="right"
        href="/"
        title="My Sporran Identity"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="My Sporran Identity"
            class="bubble bubbleActive"
            href="/"
            title="My Sporran Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="My Second Identity"
            class="bubble bubbleActive"
            href="/"
            title="My Second Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="My Third Identity which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="My Third Identity which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add identity"
            class="add addActive"
            href="/"
            title="Add identity"
          />
        </li>
      </ul>
    </div>
    <a
      class="add"
      href="/identity/add"
    >
      Add identity
    </a>
    <p
      class="stats"
    >
      You have 3 identities with a total
      <span
        class="balance"
      >
         Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="Kilt coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`SendToken should render 1`] = `
<div>
  <form
    autocomplete="off"
    class="container"
  >
    <h1
      class="heading"
    >
      Send KILT Coins
    </h1>
    <p
      class="subline"
    >
      Securely send some of your coins
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            My Sporran Identity
          </span>
        </div>
      </section>
      <a
        aria-label="Add identity"
        class="left"
        href="/"
        title="Add identity"
      />
      <a
        aria-label="My Second Identity"
        class="right"
        href="/"
        title="My Second Identity"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="My Sporran Identity"
            class="bubble bubbleActive"
            href="/"
            title="My Sporran Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="My Second Identity"
            class="bubble bubbleActive"
            href="/"
            title="My Second Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="My Third Identity which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="My Third Identity which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add identity"
            class="add addActive"
            href="/"
            title="Add identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1.2340
         
        <span
          aria-label="Kilt coin"
          class="coin"
        />
      </span>
    </p>
    <small
      class="maximum"
    >
      Maximum sendable amount: 
      1.1260 K
    </small>
    <p
      class="amountLine"
    >
      <input
        aria-label="Amount to send"
        class="amount"
        inputmode="numeric"
        maxlength="15"
        name="amount"
        placeholder="0.0100 – 1.1260"
        required=""
      />
      <button
        class="all"
        type="button"
      >
        All in
      </button>
      <output
        class="amountError"
        for="amount"
        hidden=""
      />
    </p>
    <p
      class="totalLine"
    >
      <button
        aria-label="Decrease the tip by 1%"
        class="decrease"
        disabled=""
        title="Decrease the tip by 1%"
        type="button"
      />
      <small
        class="total"
      >
        Costs: 
        0.1000
         K
      </small>
      <button
        aria-label="Increase the tip by 1%"
        class="increase"
        title="Increase the tip by 1%"
        type="button"
      />
    </p>
    <small
      class="tip"
    >
      Tip of 0% included in costs
    </small>
    <p
      class="recipientLine"
    >
      <input
        aria-label="Paste the recipient address here"
        class="recipientWithButton"
        id="recipient"
        name="recipient"
        placeholder="Paste the recipient address here"
        required=""
      />
      <button
        aria-label="Paste to clipboard"
        class="paste"
        title="Paste to clipboard"
        type="button"
      />
      <output
        class="recipientError"
        for="recipient"
        hidden=""
      />
    </p>
    <p
      class="submitLine"
    >
      <button
        class="submit"
        disabled=""
        type="submit"
      >
        Review & Sign Transaction
      </button>
      <output
        class="offlineError"
        hidden=""
      />
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 identities with a total
      <span
        class="balance"
      >
         Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="Kilt coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </form>
</div>
`;
